k8s/cert-manager/coit-backend-ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coit-backend1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    -  api.jijo.com.35.184.202.26.sslip.io
    secretName:   api.jijo.com.35.184.202.26.sslip.io
  rules:
  - host:  api.jijo.com.35.184.202.26.sslip.io 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coit-backend1-lb
            port:
              number: 80
